adaptar administrador de paqueterías a usar repositorio